--- a/src/sass/layout/_typography.scss
+++ b/src/sass/layout/_typography.scss
@@ -344,3 +344,11 @@ kbd {
 .blockquote-footer {
   margin-top: initial;
 }
+
+.h-content {
+  height: 73vh !important;
+}
+
+.form-textarea {
+  height: 118px !important;
+}
