--- a/src/sass/layout/_typography.scss
+++ b/src/sass/layout/_typography.scss
@@ -354,3 +354,78 @@ kbd {
 .form-textarea {
   height: 118px !important;
 }
+
+@media screen and (max-width: 1280px) {
+  .bg-img-banner {
+    aspect-ratio: 753/708;
+    width: 600px !important;
+    height: auto !important;
+    z-index: 0;
+  }
+}
+
+@media screen and (max-width: 1100px) {
+  .bg-img-banner {
+    aspect-ratio: 753/708;
+    width: 500px !important;
+    height: auto !important;
+  }
+}
+
+@media screen and (max-width: 992px) {
+  .form-login {
+    z-index: 1;
+    max-width: 500px;
+    margin-inline: auto;
+  }
+}
+
+.fixed-background {
+  background-color: #FFFFFF;
+}
+
+
+@media screen and (max-width: 991px) {
+  .bg-fade {
+    position: absolute;
+    background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, #FFFFFF 100%);
+    width: 100%;
+    height: 100%;
+    z-index: 3;
+  }
+  .form-login {
+    align-items: start !important;
+    min-height: auto !important;
+    bottom: 0;
+    .tooltip-end-bottom {
+      width: 100% !important;
+    }
+    .content {
+      margin-top: -12rem;
+    }
+  }
+}
+
+
+@media screen and (max-width: 576px) {
+  .bg-fade {
+    position: absolute;
+    background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, #FFFFFF 100%);
+    width: 100%;
+    height: 100%;
+    z-index: 3;
+  }
+  .form-login {
+    padding: 24px;
+    position: absolute;
+    .content {
+      .title {
+        font-size: 40px !important;
+        line-height: 40px !important;
+      }
+      .desc {
+        font-size: 16px !important;
+      }
+    }
+  }
+}
