Responsive/Member, ProhibitedWords, ResolveWord

--- a/src/sass/bootstrap/_form.scss
+++ b/src/sass/bootstrap/_form.scss
@@ -132,7 +132,8 @@ textarea.form-control {
 
   input {
     background: transparent !important;
-    width: calc(100% - 25px);
+    // width: calc(100% - 25px);
+    width: 100%;
     border: initial;
   }
 
