--- a/src/sass/layout/_typography.scss
+++ b/src/sass/layout/_typography.scss
@@ -347,12 +347,24 @@ kbd {
   margin-top: initial;
 }
 
+
 .h-content {
-  height: 73vh !important;
+  // min-height: fit-content;
+  height: 559px !important;
 }
 
 .form-textarea {
   height: 118px !important;
+}
+
+input.form-control:focus {
+  border: 2px solid #E293D3 !important;
+  box-shadow: 0px 0px 2px 1px #E293D37F !important;
+}
+
+.border-spacing-none { 
+  border-spacing: 0 !important;
+  border-collapse: separate;
 }
 
 @media screen and (max-width: 1280px) {
