--- a/src/views/landingPage/css/hero.css
+++ b/src/views/landingPage/css/hero.css
@@ -9,6 +9,10 @@
     z-index: -1;
 }
 
+.hero-section .back-drop {
+    display: none;
+}
+
 .hero-section .group-text {
     display: flex;
     flex-direction: column;
@@ -37,4 +41,60 @@
     font-weight: 700;
     font-size: 24px;
     line-height: 40px;
+}
+
+@media screen and (max-width: 920px) {
+    .hero-section .cover {
+        object-position: 72% center;
+    }
+
+    .hero-section .group-text {
+        display: flex;
+        flex-direction: column;
+        gap: 32px;
+        margin-left: 0px;
+        margin-top: 200px;
+        justify-content: center;
+        align-items: center;
+        height: 100%;
+        width: 100%;
+        z-index: 2000;
+        position: absolute;
+    }
+
+    .hero-section .group-text div:nth-child(1) {
+        font-weight: 600;
+        font-size: 32px;
+        line-height: 38.4px;
+        text-align: center;
+        color: #CB0C9F;
+    }
+
+    .hero-section .group-text div:nth-child(2) {
+        display: none;
+    }
+
+    .hero-section .group-text .btn {
+        font-weight: 400;
+        font-size: 24px;
+        line-height: 40px;
+        font-family: 'Popping', sans-serif;
+    }
+
+    .bg-back-drop {
+        position: absolute;
+        background: rgba(0, 0, 0, 0.1);
+        /* background: linear-gradient(180deg, rgba(0, 0, 0, 0.2) 0%, rgba(230, 231, 235, 1) 100%); */
+        width: 100%;
+        height: 100%;
+        z-index: 3;
+    }
+
+    .bg-fade {
+        position: absolute;
+        background: linear-gradient(180deg, rgba(0, 0, 0, 0.1) 50%, rgba(230, 231, 235, 1) 80%);
+        width: 100%;
+        height: 100%;
+        z-index: 2;
+    }
 }
