--- a/src/views/landingPage/css/section-words.css
+++ b/src/views/landingPage/css/section-words.css
@@ -16,12 +16,23 @@
   color: white;
 }
 
+.contents .right .word-detail span{
+  font-size: 20px !important;
+}
+
+@media screen and (max-width: 1200px) {
+  .contents .right .word-detail span{
+    font-size: 16px !important;
+  }
+}
+
 @media screen and (max-width: 991px) {
   .section-words .contents {
     padding-inline: 2rem;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    gap: 0.5rem;
     height: 100%;
   }
   .section-words {
@@ -30,6 +41,15 @@
   }
   .section-words .contents .left, .right {
     width: 100% !important;
+  }
+
+  .contents .left h2 {
+    font-size: 32px !important;
+    line-height: 48px;
+  }
+
+  .contents .right .word-detail span{
+    font-size: 16px !important;
   }
 }
 
