--- a/src/views/landingPage/css/about-us.css
+++ b/src/views/landingPage/css/about-us.css
@@ -63,8 +63,11 @@
 }
 
 @media screen and (min-width: 768px) and (max-width: 991px) {
+  .about-us {
+    min-height: 549px;
+  }
   .about-us .card .card-body {
-    padding: 1.5rem;
+    padding: 10px;
   }
   .about-us .card .card-text {
     margin-top: auto;
@@ -94,9 +97,21 @@
   .about-us .head-title p {
     font-size: 1rem !important;
   }
+  .about-us .contents {
+    padding-inline: 0;
+  }
 }
 
 @media screen and (max-width: 768px) {
+  .about-us {
+    min-height: 549px;
+  }
+   .about-us .card .text-autor {
+    font-size: 16px;
+  }
+  .about-us .card .card-body {
+    padding: 10px;
+  }
   .about-us .head-title h2 {
     font-size: 2rem !important;
   }
@@ -106,7 +121,7 @@
   .about-us .contents {
     flex-wrap: wrap;
     row-gap: 1rem;
-    padding-inline: 2rem;
+    padding-inline: 0;
   }
 
   .about-us .card .card-text {
